--- a/tasks/system/archlinux/packages.yml
+++ b/tasks/system/archlinux/packages.yml
@@ -1,6 +1,6 @@
 ---
 - name: Archlinux - Install packages
-  pacman:
+  community.general.pacman:
     name: "{{ item }}"
     state: present
   loop:
