--- a/tasks/system/gcloud.yml
+++ b/tasks/system/gcloud.yml
@@ -1,13 +1,13 @@
 ---
 ### --- Family Specific Setup
 - name: Archlinux GCloud
-  import_tasks: archlinux/gcloud.yml
+  ansible.builtin.import_tasks: archlinux/gcloud.yml
   when: ansible_os_family == 'Archlinux'
 
 - name: Debian GCloud
-  import_tasks: debian/gcloud.yml
+  ansible.builtin.import_tasks: debian/gcloud.yml
   when: ansible_os_family == 'Debian'
 
 - name: RedHat GCloud
-  import_tasks: redhat/gcloud.yml
+  ansible.builtin.import_tasks: redhat/gcloud.yml
   when: ansible_os_family == 'RedHat'
