--- a/tasks/system/archlinux/docker.yml
+++ b/tasks/system/archlinux/docker.yml
@@ -1,6 +1,6 @@
 ---
 - name: Archlinux - Install docker
-  pacman:
+  community.general.pacman:
     name: "{{ item }}"
     state: present
   loop:
