--- a/tasks/system/docker.yml
+++ b/tasks/system/docker.yml
@@ -1,26 +1,26 @@
 ---
 - name: All - Install docker-compose {{ docker_compose_version }}
-  get_url:
+  ansible.builtin.get_url:
     url: "https://github.com/docker/compose/releases/download/{{ docker_compose_version }}/docker-compose-{{ ansible_system }}-{{ ansible_machine }}"
     dest: /usr/local/bin/docker-compose-{{ docker_compose_version }}
     mode: '0755'
 
 - name: Non-Debian - Install docker-compose completions {{ docker_compose_version }}
-  get_url:
+  ansible.builtin.get_url:
     url: "https://raw.githubusercontent.com/docker/compose/{{ docker_compose_version }}/contrib/completion/zsh/_docker-compose"
     dest: /usr/share/zsh/site-functions/_docker-compose
     mode: '0644'
   when: ansible_os_family != 'Debian'
 
 - name: Debian - Install docker-compose completions {{ docker_compose_version }}
-  get_url:
+  ansible.builtin.get_url:
     url: "https://raw.githubusercontent.com/docker/compose/{{ docker_compose_version }}/contrib/completion/zsh/_docker-compose"
     dest: /usr/local/share/zsh/site-functions/_docker-compose
     mode: '0644'
   when: ansible_os_family == 'Debian'
 
 - name: All - Update link to latest docker-compose
-  file:
+  ansible.builtin.file:
     src: /usr/local/bin/docker-compose-{{ docker_compose_version }}
     dest: /usr/local/bin/docker-compose
     state: hard
@@ -28,27 +28,27 @@
     mode: '0755'
 
 - name: All - Enable execue for docker-compose
-  file:
+  ansible.builtin.file:
     src: /usr/local/bin/docker-compose-{{ docker_compose_version }}
     dest: /usr/local/bin/docker-compose
     mode: +rx
 
 ### --- Family Specific Setup
 - name: Archlinux Docker
-  import_tasks: archlinux/docker.yml
+  ansible.builtin.import_tasks: archlinux/docker.yml
   when: ansible_os_family == 'Archlinux'
 
 - name: Debian Docker
-  import_tasks: debian/docker.yml
+  ansible.builtin.import_tasks: debian/docker.yml
   when: ansible_os_family == 'Debian'
 
 - name: RedHat Docker
-  import_tasks: redhat/docker.yml
+  ansible.builtin.import_tasks: redhat/docker.yml
   when: ansible_os_family == 'RedHat'
 
 ### --- Post actions
 - name: All - Add user to docker group
-  user:
+  ansible.builtin.user:
     name: "{{ ansible_user_id }}"
     append: true
     groups: docker
