--- a/tasks/system/redhat/fedora/packages.yml
+++ b/tasks/system/redhat/fedora/packages.yml
@@ -1,6 +1,6 @@
 ---
 - name: Fedora - Install packages
-  dnf:
+  ansible.builtin.dnf:
     name: "{{ item }}"
     state: present
   loop:
@@ -18,7 +18,7 @@
     - sqlitebrowser
 
 - name: Fedora >=26 - Install packages
-  dnf:
+  ansible.builtin.dnf:
     name:
       - flameshot
       - fzf
@@ -26,21 +26,21 @@
   when: ansible_distribution_major_version|int >= 26
 
 - name: Fedora >=27 - Install packages
-  dnf:
+  ansible.builtin.dnf:
     name:
       - podman
     state: present
   when: ansible_distribution_major_version|int >= 27
 
 - name: Fedora <=27 - Install mysql-community-devel
-  dnf:
+  ansible.builtin.dnf:
     name:
       - mysql-community-devel  # from the community repository
     state: present
   when: ansible_distribution_major_version|int <= 27
 
 - name: Fedora >=28 - Install packages
-  dnf:
+  ansible.builtin.dnf:
     name:
       - code
       - community-mysql-devel  # from fedora modular
@@ -48,7 +48,7 @@
   when: ansible_distribution_major_version|int >= 28
 
 - name: Fedora >=29 - Install packages
-  dnf:
+  ansible.builtin.dnf:
     name:
       - bat
       - dbus-daemon
@@ -62,7 +62,7 @@
   when: ansible_distribution_major_version|int >= 29
 
 - name: Fedora >=29 - Install bluetooth codecs
-  dnf:
+  ansible.builtin.dnf:
     name:
       - pulseaudio-module-bluetooth-freeworld
     state: present
@@ -70,7 +70,7 @@
   when: ansible_distribution_major_version|int >= 29
 
 - name: Fedora >=30 - Install packages
-  dnf:
+  ansible.builtin.dnf:
     name:
       - google-noto-sans-display-vf-fonts
       - google-noto-sans-mono-vf-fonts
@@ -79,7 +79,7 @@
   when: ansible_distribution_major_version|int >= 30
 
 - name: Fedora >=31 - Install packages
-  dnf:
+  ansible.builtin.dnf:
     name:
       - git-delta
       - google-roboto-mono-fonts
@@ -90,7 +90,7 @@
   when: ansible_distribution_major_version|int >= 31
 
 - name: Fedora >=32 - Install packages
-  dnf:
+  ansible.builtin.dnf:
     name:
       - zoxide  # A faster way to navigate your filesystem
     state: present
