--- a/tasks/system/redhat/repositories.yml
+++ b/tasks/system/redhat/repositories.yml
@@ -1,6 +1,6 @@
 ---
 - name: RedHat - Add dnf plugins
-  dnf:
+  ansible.builtin.dnf:
     name:
       - dnf-plugins-core
 
@@ -94,27 +94,27 @@
     fingerprint: 396060CADD8A75220BFCB369B903BF1861A7C71D
 
 - name: RedHat - check if rpmfusion-free.repo file exists
-  stat:
+  ansible.builtin.stat:
     path: /etc/yum.repos.d/rpmfusion-free.repo
   register: rpmfusion_free_repo
 
 - name: RedHat - check if rpmfusion-free-updates.repo file exists
-  stat:
+  ansible.builtin.stat:
     path: /etc/yum.repos.d/rpmfusion-free-updates.repo
   register: rpmfusion_free_updates_repo
 
 - name: RedHat - check if rpmfusion-nonfree.repo file exists
-  stat:
+  ansible.builtin.stat:
     path: /etc/yum.repos.d/rpmfusion-nonfree.repo
   register: rpmfusion_nonfree_repo
 
 - name: RedHat - check if rpmfusion-nonfree-updates.repo file exists
-  stat:
+  ansible.builtin.stat:
     path: /etc/yum.repos.d/rpmfusion-nonfree-updates.repo
   register: rpmfusion_nonfree_updates_repo
 
 ### --- Distro specific ---
 
 - name: Fedora Repositories
-  import_tasks: fedora/repositories.yml
+  ansible.builtin.import_tasks: fedora/repositories.yml
   when: ansible_distribution == 'Fedora'
