--- a/tasks/user/dotfiles.yml
+++ b/tasks/user/dotfiles.yml
@@ -1,29 +1,29 @@
 ---
 - name: All - Check if dotfiles exist
-  stat:
+  ansible.builtin.stat:
     path: ~/Applications/dotfiles
   register: dotfiles
 
 - name: All - Stash dotfile changes  # noqa 303
-  command:
+  ansible.builtin.command:
     chdir: ~/Applications/dotfiles
     cmd: git stash
   when: dotfiles.stat.isdir is defined and dotfiles.stat.isdir
   register: stashed_changes
 
 - name: All - Git update dotfiles
-  git:
+  ansible.builtin.git:
     repo: https://gitlab.com/perobertson/dotfiles.git
     dest: ~/Applications/dotfiles
     version: main
   register: git_dotfiles
 
 - name: All - UnStash dotfile changes  # noqa 303
-  command:
+  ansible.builtin.command:
     chdir: ~/Applications/dotfiles
     cmd: git stash pop
   when: stashed_changes.stdout is defined and stashed_changes.stdout != 'No local changes to save'
 
 - name: All - Install Dotfiles  # noqa no-handler
-  command: ~/Applications/dotfiles/install.py
+  ansible.builtin.command: ~/Applications/dotfiles/install.py
   when: git_dotfiles is changed
