redhat: systemd is not available in docker

--- a/tasks/system/redhat/repositories.yml
+++ b/tasks/system/redhat/repositories.yml
@@ -124,7 +124,9 @@
   ansible.builtin.command:
     chdir: /opt/zoom-yum-repo
     cmd: make install-service start-service
-  when: git_zoom_yum_repo is changed
+  when:
+    - not file_dockerenv.stat.exists
+    - git_zoom_yum_repo is changed
 
 ### --- Distro specific ---
 
