--- a/tasks/user/applications.yml
+++ b/tasks/user/applications.yml
@@ -1,17 +1,17 @@
 ---
-- name: All - Git update pyenv  # noqa 401
+- name: All - Git update pkenv  # noqa git-latest
   diff: false
   ansible.builtin.git:
     repo: https://github.com/iamhsa/pkenv.git
     dest: ~/Applications/pkenv
 
-- name: All - Git update pyenv  # noqa 401
+- name: All - Git update pyenv  # noqa git-latest
   diff: false
   ansible.builtin.git:
     repo: https://github.com/pyenv/pyenv.git
     dest: ~/Applications/pyenv
 
-- name: All - Git update pyenv plugins  # noqa 401
+- name: All - Git update pyenv plugins  # noqa git-latest
   diff: false
   ansible.builtin.git:
     repo: "{{ item.repo }}"
@@ -24,14 +24,14 @@
     - repo: https://github.com/pyenv/pyenv-virtualenv.git
       name: pyenv-virtualenv
 
-- name: All - Git update rbenv  # noqa 401
+- name: All - Git update rbenv  # noqa git-latest
   diff: false
   ansible.builtin.git:
     repo: https://github.com/rbenv/rbenv.git
     dest: ~/Applications/rbenv
   register: git_rbenv
 
-- name: All - Git update rbenv - ruby build  # noqa 401
+- name: All - Git update rbenv - ruby build  # noqa git-latest
   diff: false
   ansible.builtin.git:
     repo: https://github.com/rbenv/ruby-build.git
@@ -50,13 +50,13 @@
     cmd: make -C src
   when: git_rbenv is changed or git_ruby_build is changed
 
-- name: All - Git update tfenv  # noqa 401
+- name: All - Git update tfenv  # noqa git-latest
   diff: false
   ansible.builtin.git:
     repo: https://github.com/tfutils/tfenv.git
     dest: ~/Applications/tfenv
 
-- name: All - Git update tools  # noqa 401
+- name: All - Git update tools  # noqa git-latest
   diff: false
   ansible.builtin.git:
     repo: https://gitlab.com/perobertson/cli-tools.git
