--- a/tasks/system/debian/debian/packages.yml
+++ b/tasks/system/debian/debian/packages.yml
@@ -6,3 +6,10 @@
       - npm
     state: present
   when: ansible_distribution_major_version|int >= 10
+
+- name: Debian >=11 - Install packages
+  ansible.builtin.apt:
+    pkg:
+      - python3-cairo  # required to fix default python
+    state: present
+  when: ansible_distribution_major_version|int >= 11
