--- a/tasks/system/docker.yml
+++ b/tasks/system/docker.yml
@@ -1,36 +1,37 @@
 ---
-- name: All - Install docker-compose {{ docker_compose_version }}
+- name: All - Install docker compose {{ docker_compose_version }}
   ansible.builtin.get_url:
-    url: "https://github.com/docker/compose/releases/download/{{ docker_compose_version }}/docker-compose-{{ ansible_system }}-{{ ansible_machine }}"
-    dest: /usr/local/bin/docker-compose-{{ docker_compose_version }}
+    url: "https://github.com/docker/compose/releases/download/v{{ docker_compose_version }}/docker-compose-{{ ansible_system | lower }}-{{ ansible_machine }}"
+    dest: /usr/local/lib/docker/cli-plugins/docker-compose-{{ ansible_system | lower }}-{{ ansible_machine }}
+    checksum: "sha256:https://github.com/docker/compose/releases/download/v{{ docker_compose_version }}/docker-compose-{{ ansible_system | lower }}-{{ ansible_machine }}.sha256"
     mode: '0755'
 
-- name: Non-Debian - Install docker-compose completions {{ docker_compose_version }}
-  ansible.builtin.get_url:
-    url: "https://raw.githubusercontent.com/docker/compose/{{ docker_compose_version }}/contrib/completion/zsh/_docker-compose"
-    dest: /usr/share/zsh/site-functions/_docker-compose
-    mode: '0644'
-  when: ansible_os_family != 'Debian'
+# TODO: add completions for docker compose
+# - name: Non-Debian - Install docker-compose completions {{ docker_compose_version }}
+#   ansible.builtin.get_url:
+#     url: "https://raw.githubusercontent.com/docker/compose/{{ docker_compose_version }}/contrib/completion/zsh/_docker-compose"
+#     dest: /usr/share/zsh/site-functions/_docker-compose
+#     mode: '0644'
+#   when: ansible_os_family != 'Debian'
 
-- name: Debian - Install docker-compose completions {{ docker_compose_version }}
-  ansible.builtin.get_url:
-    url: "https://raw.githubusercontent.com/docker/compose/{{ docker_compose_version }}/contrib/completion/zsh/_docker-compose"
-    dest: /usr/local/share/zsh/site-functions/_docker-compose
-    mode: '0644'
-  when: ansible_os_family == 'Debian'
+# - name: Debian - Install docker-compose completions {{ docker_compose_version }}
+#   ansible.builtin.get_url:
+#     url: "https://raw.githubusercontent.com/docker/compose/{{ docker_compose_version }}/contrib/completion/zsh/_docker-compose"
+#     dest: /usr/local/share/zsh/site-functions/_docker-compose
+#     mode: '0644'
+#   when: ansible_os_family == 'Debian'
 
-- name: All - Update link to latest docker-compose
+# - name: All - Update link to latest docker-compose
+#   ansible.builtin.file:
+#     src: /usr/local/bin/docker-compose-{{ docker_compose_version }}
+#     dest: /usr/local/bin/docker-compose
+#     state: hard
+#     force: true
+#     mode: '0755'
+
+- name: All - Enable execue for docker compose
   ansible.builtin.file:
-    src: /usr/local/bin/docker-compose-{{ docker_compose_version }}
-    dest: /usr/local/bin/docker-compose
-    state: hard
-    force: true
-    mode: '0755'
-
-- name: All - Enable execue for docker-compose
-  ansible.builtin.file:
-    src: /usr/local/bin/docker-compose-{{ docker_compose_version }}
-    dest: /usr/local/bin/docker-compose
+    path: /usr/local/lib/docker/cli-plugins/docker-compose-{{ ansible_system | lower }}-{{ ansible_machine }}
     mode: +rx
 
 ### --- Family Specific Setup
